--- a/angular.json
+++ b/angular.json
@@ -69,7 +69,7 @@
                 }
               ],
 
-              "optimization": true,
+              "optimization": false,
               "outputHashing": "all",
               "sourceMap": true,
               "extractCss": true,
