--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # compiled output
 /dist
+/public
 /tmp
 /out-tsc
 # Only exists if Bazel was run
@@ -48,3 +49,5 @@ pubsub-debug.log
 # System Files
 .DS_Store
 Thumbs.db
+
+ui-debug.log
