--- a/angular.json
+++ b/angular.json
@@ -90,6 +90,35 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "local_prod": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": false,
+              "outputHashing": "all",
+              "sourceMap": true,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": false,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
             }
           }
         },
@@ -104,6 +133,9 @@
             },
             "local": {
               "browserTarget": "bus-factor-app:build:local"
+            },
+            "local_prod": {
+              "browserTarget": "bus-factor-app:build:local_prod"
             }
           }
         },
